Make sure mobile search is hidden when collapsed

--- a/sundsvall_se-theme/assets/css/scss/partials/_site-header.scss
+++ b/sundsvall_se-theme/assets/css/scss/partials/_site-header.scss
@@ -140,6 +140,8 @@ body {
 		background: rgba(profile-color(björnstigen, 2), .95);
 	}
 
+	overflow: hidden;
+
 	&.active {
 		height: 100px;
 	}
